--- a/BarcodeScanner/UI/Popups/ProductPopup.xib
+++ b/BarcodeScanner/UI/Popups/ProductPopup.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,35 +21,34 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProductPopup" customModule="BarcodeScanner" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Классификатор продукта" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8b-84-dH5">
-                    <rect key="frame" x="185" y="40" width="175" height="61"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Классификатор продукта" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8b-84-dH5">
+                    <rect key="frame" x="185" y="42.5" width="175" height="61"/>
                     <fontDescription key="fontDescription" name="ProximaNovaExCn-Thin" family="Proxima Nova Extra Condensed" pointSize="25"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uMG-gG-GUo">
-                    <rect key="frame" x="339" y="15" width="21" height="22"/>
-                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <state key="normal" image="xmark" catalog="system">
+                    <rect key="frame" x="334.5" y="15" width="25.5" height="24.5"/>
+                    <state key="normal" image="xmark.circle.fill" catalog="system">
                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="semibold"/>
                     </state>
                     <connections>
-                        <action selector="dismissPressed:" destination="-1" eventType="touchUpInside" id="seg-qT-dmL"/>
+                        <action selector="dismissPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="P6v-qv-d4o"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Наименование продукта" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0LC-LG-oO1">
-                    <rect key="frame" x="185" y="101" width="175" height="73.5"/>
+                    <rect key="frame" x="185" y="103.5" width="175" height="73.5"/>
                     <fontDescription key="fontDescription" name="ProximaNovaExCn-Light" family="Proxima Nova Extra Condensed" pointSize="30"/>
                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                     <size key="shadowOffset" width="1" height="1"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jql-d3-LYi">
-                    <rect key="frame" x="15" y="235" width="160" height="35"/>
+                    <rect key="frame" x="15" y="237.5" width="160" height="35"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3661434004308" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7sI-Fe-G98">
                             <rect key="frame" x="15" y="3" width="130" height="29"/>
@@ -69,10 +68,11 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aLJ-zy-rh6">
-                    <rect key="frame" x="15" y="40" width="160" height="190"/>
+                    <rect key="frame" x="15" y="42.5" width="160" height="190"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iy2-6j-pVB">
                             <rect key="frame" x="8" y="8" width="144" height="174"/>
+                            <color key="backgroundColor" systemColor="secondarySystemFillColor" red="0.47058823529999999" green="0.47058823529999999" blue="0.50196078430000002" alpha="0.16" colorSpace="custom" customColorSpace="sRGB"/>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -91,29 +91,31 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="0LC-LG-oO1" secondAttribute="trailing" constant="15" id="1sF-0T-Gwe"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="uMG-gG-GUo" secondAttribute="trailing" constant="15" id="4Li-zZ-ewW"/>
                 <constraint firstItem="0LC-LG-oO1" firstAttribute="leading" secondItem="aLJ-zy-rh6" secondAttribute="trailing" constant="10" id="Acj-qz-whb"/>
-                <constraint firstItem="aLJ-zy-rh6" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="40" id="PKy-Z2-Cwf"/>
-                <constraint firstItem="i8b-84-dH5" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="40" id="Rxh-v0-04b"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="0LC-LG-oO1" secondAttribute="bottom" constant="60" id="CME-6H-Geu"/>
+                <constraint firstItem="i8b-84-dH5" firstAttribute="top" secondItem="uMG-gG-GUo" secondAttribute="bottom" constant="3" id="ToT-3X-DaW"/>
                 <constraint firstItem="aLJ-zy-rh6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="Ua4-xZ-eMW"/>
                 <constraint firstItem="Jql-d3-LYi" firstAttribute="top" secondItem="aLJ-zy-rh6" secondAttribute="bottom" constant="5" id="bQm-Pm-SZC"/>
                 <constraint firstItem="0LC-LG-oO1" firstAttribute="top" secondItem="i8b-84-dH5" secondAttribute="bottom" id="ckJ-RG-tCu"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="i8b-84-dH5" secondAttribute="trailing" constant="15" id="eYx-84-Ke1"/>
+                <constraint firstItem="aLJ-zy-rh6" firstAttribute="top" secondItem="i8b-84-dH5" secondAttribute="top" id="jLl-kq-WU2"/>
                 <constraint firstItem="i8b-84-dH5" firstAttribute="leading" secondItem="aLJ-zy-rh6" secondAttribute="trailing" constant="10" id="pbf-xL-X9Q"/>
                 <constraint firstItem="Jql-d3-LYi" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="15" id="pvE-fG-Vic"/>
                 <constraint firstItem="uMG-gG-GUo" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="15" id="tl5-ew-OFk"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="barcodeBackView" destination="Jql-d3-LYi" id="gL2-Rf-3eO"/>
-                <outlet property="barcodeLabel" destination="7sI-Fe-G98" id="QWK-6u-3jO"/>
-                <outlet property="productClass" destination="i8b-84-dH5" id="Y2g-eb-ccC"/>
-                <outlet property="productImage" destination="iy2-6j-pVB" id="xhS-xg-hZ3"/>
-                <outlet property="productImageBackView" destination="aLJ-zy-rh6" id="BHj-1D-9pf"/>
-                <outlet property="productName" destination="0LC-LG-oO1" id="fQW-Ve-DV5"/>
+                <outlet property="barcodeBackView" destination="Jql-d3-LYi" id="S7K-dY-5Il"/>
+                <outlet property="barcodeLabel" destination="7sI-Fe-G98" id="77X-yv-1ZD"/>
+                <outlet property="productClass" destination="i8b-84-dH5" id="2BX-jc-3y2"/>
+                <outlet property="productImageBackView" destination="aLJ-zy-rh6" id="g7i-yG-93d"/>
+                <outlet property="productImageView" destination="iy2-6j-pVB" id="sxT-dN-HnJ"/>
+                <outlet property="productName" destination="0LC-LG-oO1" id="qaM-Hy-yZw"/>
             </connections>
-            <point key="canvasLocation" x="119.2" y="143.47826086956522"/>
+            <point key="canvasLocation" x="119.2" y="-30.584707646176913"/>
         </view>
     </objects>
     <resources>
-        <image name="xmark" catalog="system" width="64" height="56"/>
+        <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
     </resources>
 </document>
