--- a/BarcodeScanner/Modules/Error/View/ErrorViewController.xib
+++ b/BarcodeScanner/Modules/Error/View/ErrorViewController.xib
@@ -26,7 +26,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="268"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="274"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Uc-Lo-vwH">
@@ -38,25 +38,30 @@
                         <action selector="dismissPressed:" destination="-1" eventType="touchUpInside" id="Zo2-kM-mtE"/>
                     </connections>
                 </button>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Vuf-tQ-Knr">
-                    <rect key="frame" x="32" y="55.5" width="311" height="180.5"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Vuf-tQ-Knr">
+                    <rect key="frame" x="32" y="55.5" width="311" height="186.5"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barcode.viewfinder" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="uAk-5n-Mmf">
                             <rect key="frame" x="113.5" y="3.5" width="84" height="77"/>
                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="70"/>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Уупс!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLC-9m-pXt">
-                            <rect key="frame" x="128.5" y="86.5" width="54.5" height="37"/>
-                            <fontDescription key="fontDescription" name="ProximaNovaExCn-Bold" family="Proxima Nova Extra Condensed" pointSize="30"/>
-                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Похоже, что в базе данных не нашлось товаров с подходящим штрихкодом" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LkP-94-Xda">
-                            <rect key="frame" x="18" y="126.5" width="275" height="54"/>
-                            <fontDescription key="fontDescription" name="ProximaNovaExCn-Regular" family="Proxima Nova Extra Condensed" pointSize="22"/>
-                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="ihq-J8-7Df">
+                            <rect key="frame" x="18" y="91.5" width="275" height="95"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Уупс!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLC-9m-pXt">
+                                    <rect key="frame" x="110.5" y="0.0" width="54.5" height="37"/>
+                                    <fontDescription key="fontDescription" name="ProximaNovaExCn-Bold" family="Proxima Nova Extra Condensed" pointSize="30"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Похоже, что в базе данных не нашлось товаров с подходящим штрихкодом" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LkP-94-Xda">
+                                    <rect key="frame" x="0.0" y="41" width="275" height="54"/>
+                                    <fontDescription key="fontDescription" name="ProximaNovaExCn-Regular" family="Proxima Nova Extra Condensed" pointSize="22"/>
+                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
                     </subviews>
                 </stackView>
             </subviews>
@@ -71,7 +76,7 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="4Uc-Lo-vwH" secondAttribute="trailing" constant="15" id="yvc-We-dj1"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="138.40000000000001" y="-39.580209895052477"/>
+            <point key="canvasLocation" x="138.40000000000001" y="-42.278860569715143"/>
         </view>
     </objects>
     <resources>
